# high-entropy-alloy-sims

Atomsk/: create_ni_crystal_script.txt
Atomsk (Equiatomic Crystal Generation)/Ni/: create_ni_crystal_script.txt
Atomsk/NiCoCrFe/: create_NiCoCrFe_script.txt
Interatomic Potentials/EAM_Dynamo_FarkasCaro_2018_FeNiCrCoCu__MO_803527979660_000/: CMakeLists.txt  kimcite-MO_803527979660_000.bib  kimprovenance.edn  kimspec.edn
Irradiation/: pka_radiation_5KeV.in  readme.txt
LAMMPS/Custom Crystal Generation/: custom_NiCoCrFeCu_generation.in  readme.md
LAMMPS/PKA Irradiation/: readme.txt
LAMMPS/PKA Irradiation/NiCoCrFe/: pka_irradiation_5KeV_z_NiCoCrFe.in  readme.txt
LAMMPS/Relaxation/: readme.txt
LAMMPS/Relaxation/NiCoCrFe/: relax_NiCoCrFe_100ps_npt.in
LAMMPS/Tensile Tests/: readme.txt
LAMMPS/Tensile Tests/Ni/: Ni_Tensile_5KeV.def1.txt  Ni_Tensile_Test_Prerelaxed_5KeV.in
PKA Irradiation/: readme.txt
Post Processing/HEA/: stress_strain_curve.py
Post Processing/Pure Ni/: Ni_Tensile.def1.txt  Ni_Tensile_5KeV.def1.txt  modified_Ni_Tensile_5KeV.def1.txt  modify_strain.py  stress_strain_curve.py
Post Processing/Pure Ni/With_FeCrCoNiCu_Potential/: stress_strain_curve.py
Post Processing/With ZBL potential/HEA/: NiCoCrFe_Tensile_5KeV.def1.txt  stress_strain_curve.py
Relaxation/: readme.txt  relax_Ni.in
Tensile Tests/NiCoCrFe/: NiCoCrFe_Tensile_Test_Unirradiated.in  NiCoCrFe_Tensile_Unirradiated.def1.txt
Tensile_Tests/: Ni_Tensile_Test_5KeV.in  Ni_Tensile_Test_Prerelaxed_5KeV.in
Test_Scripts/: script_2.in
Trial Scripts/: script_1.in
(+72 files in other folders)
